# ClawHarness

./: .gitignore  CLAUDE.md  README.md  conclusion.md  exp_plan.md  metrics_guide.md  notes.md  openclaw_gateway_context_list_walkthrough.ipynb  openclaw_results_vps.ipynb  pyproject.toml  span_points.md
.state/: device.json
report/: pdf.css  report.docx  report.md
res/: summary.md
scenarios/: docker_multi.json  docker_multi_100_summary.json  docker_multi_resource_profile.json  docker_multi_task_mix.json  docker_multi_task_semianalysis_100_summary.json  docker_multi_task_semianalysis_smoke.json  docker_single.json  docker_single_100_summary.json  docker_single_resource_profile.json  docker_single_task_comprehension.json  docker_single_task_context.json  docker_single_task_semianalysis_100_summary.json  docker_single_task_semianalysis_smoke.json  template_explained.md  vps_host_direct_single.json
scripts/: batch_harness.py  batch_run.json  export_pair_report.py  export_pair_report_light.py  export_pair_sys_report.py  export_quad_sys_report.py  export_tri_report.py  export_tri_sys_report.py  export_tri_sysnpu_report.py  install_ubuntu_tools.sh  log_npu_usage.sh  plot_latency.py  preview_request_gantt.py  preview_request_span_blocks.py  preview_request_stage_gantt.py  res_gen.sh  run_hw_cloud_all_experiments.py  run_local_wsl.sh  run_vps_docker.sh  run_vps_host_direct.sh  showRes.py
tasks/: TASK_TEMPLATE.md  task_00_context_inventory.md  task_01_openclaw_comprehension.md  task_02_skill_discovery.md  task_03_local_summary.md  task_04_workflow_planning.md  (+1 more)
(+745 files in other folders)
