[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-client-harness"
version = "0.1.0"
description = "Local benchmark harness for OpenClaw gateway client/load testing"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "websockets>=14,<16",
]

[project.scripts]
openclaw-harness = "openclaw_harness.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
